--- a/Kurs1125/Properties/Settings.settings
+++ b/Kurs1125/Properties/Settings.settings
@@ -3,13 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="username" Type="System.String" Scope="User">
-      <Value Profile="(Default)">student</Value>
+      <Value Profile="(Default)">root</Value>
     </Setting>
     <Setting Name="password" Type="System.String" Scope="User">
-      <Value Profile="(Default)">student</Value>
+      <Value Profile="(Default)">a1s2d34f1145</Value>
     </Setting>
     <Setting Name="host" Type="System.String" Scope="User">
-      <Value Profile="(Default)">192.168.1.12</Value>
+      <Value Profile="(Default)">127.0.0.1</Value>
     </Setting>
     <Setting Name="db" Type="System.String" Scope="User">
       <Value Profile="(Default)">mydb</Value>
